--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,78 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Skeleton application demoing Heroku and Flask integration.">
-    <meta name="author" content="@gotoariel">
-    <!-- <link rel="icon" href="favicon.ico"> -->
-
-    <title>Wilkommen, bienvenue, and welcome to Heroku!</title>
-
+    <title>Stock Prices for 2019</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-left">
-          <h2>Hello, World!</h2>
-          <ul>
-            <li><a href="/about">About</a></li>
-            <li><a target="_blank" href="https://www.heroku.com/">Heroku</a></li>
-            <li><a target="_blank" href="http://flask.pocoo.org/">Flask</a></li>
-            <li><a target="_blank" href="http://jinja.pocoo.org/docs/2.9/">Jinja2</a></li>
-            <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
-          </ul>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand">Stock Prices Lookup</a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="https://github.com/jawadrasool/DIR_MilestoneProject">GitHub</a></li>
+            <li><a href="https://www.thedataincubator.com/12day.html">12-day</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-    </div>
+    </nav>
+
+    <div class="container theme-showcase" role="main">
+        <div class="jumbotron">
+            <h2>Stock Price Lookup</h2>
+            <p>This app accepts a stock ticker input from the user and plots stock price data for the year 2017.</p>
+            <p>If you’re interested in looking for more ticker symbols for company stock, you could go
+              <a href="http://eoddata.com/symbols.aspx">here</a>.</p>
+        </div>
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-3 well">
+                <form id='inputForm' method='post' action='graph' >
+                    <div class="form-group">
+                        <label for="stockName">Stock Ticker Symbol</label>
+                        <input type='text' id="stockName" class="form-control" name='ticker' value="GOOG"/>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type='checkbox' name='priceType' value='close' />Closing price
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type='checkbox' name='priceType' value='adjClose' />Adjusted Closing price
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type='checkbox' name='priceType' value='open' />Opening price
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type='checkbox' name='priceType' value='adjOpen' />Adjusted Opening price
+                        </label>
+                    </div>
+                    <p><input class="btn btn-primary" type='submit' value='Submit'/></p>
+                </form>
+            </div>
+        </div>
+    </div> <!-- /container -->
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.16.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
