--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <div class="container theme-showcase" role="main">
         <div class="jumbotron">
             <h2>Stock Price Lookup</h2>
-            <p>This app accepts a stock ticker input from the user and plots stock price data for the year 2018-2019.</p>
+            <p>This app accepts a stock ticker input from the user and plots stock price data for Nov 2020.</p>
             <p>If you’re interested in looking for more ticker symbols for company stock, you could go
               <a href="http://eoddata.com/symbols.aspx">here</a>.</p>
         </div>
