--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Stock Prices for 2019</title>
+    <title>Stock Prices for October 2020</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
@@ -39,26 +39,6 @@
                     <div class="form-group">
                         <label for="stockName">Stock Ticker Symbol</label>
                         <input type='text' id="stockName" class="form-control" name='ticker' value="GOOG"/>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type='checkbox' name='priceType' value='close' />Closing price
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type='checkbox' name='priceType' value='adjClose' />Adjusted Closing price
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type='checkbox' name='priceType' value='open' />Opening price
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type='checkbox' name='priceType' value='adjOpen' />Adjusted Opening price
-                        </label>
                     </div>
                     <p><input class="btn btn-primary" type='submit' value='Submit'/></p>
                 </form>
