--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
         <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-3 well">
-                <form id='inputForm' method='post' action='graph' >
+                <form id='inputForm' method='post' action='about' >
                     <div class="form-group">
                         <label for="stockName">Stock Ticker Symbol</label>
                         <input type='text' id="stockName" class="form-control" name='ticker' value="GOOG"/>
