--- a/templates/about.html
+++ b/templates/about.html
@@ -3,9 +3,8 @@
   <head>
     <title>Stock Prices for October 2020</title>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-0.12.16.min.css">
-    <script src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.16.min.js"></script>
+    <link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.5.min.css" rel="stylesheet">
+    <link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css" rel="stylesheet">
   </head>
   <body>
     {{ div|safe }}
