--- a/templates/index.html
+++ b/templates/index.html
@@ -35,10 +35,10 @@
         <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-3 well">
-                <form id='inputForm' method='post' action='about' >
+                <form id='inputform' method='post' action='about' >
                     <div class="form-group">
                         <label for="stockName">Stock Ticker Symbol</label>
-                        <input type='text' id="stockName" class="form-control" name='ticker' value="GOOG"/>
+                        <input type='text' name='ticker' placeholder='GOOG'/>
                     </div>
                     <p><input class="btn btn-primary" type='submit' value='Submit'/></p>
                 </form>
